# itmo-masters

./: NSO_BAOW_DATA.csv  README.md  banks.csv  sem1_algos_task1.ipynb  sem1_algos_task2.ipynb  sem1_algos_task4.ipynb  sem1_algos_task5.ipynb  sem1_algos_task6.ipynb  sem1_algos_task7.ipynb  sem1_datavis_hw2.py  sem1_datavis_hw2_co2_emissions_d3.html  sem1_datavis_hw3.ipynb  sem1_datavis_proj.ipynb  sem1_mlt_classnotes_decision_trees.ipynb  sem1_mlt_task1.ipynb  sem1_mlt_task2.py  sem1_mlt_task2_output.txt  sem1_mlt_task3.ipynb  sem1_mlt_task4.ipynb  sem1_mlt_task4_ver2.ipynb  sem1_pp_proj.cpp  sem1_pp_task1.cpp  sem1_pp_task1_0.cpp  sem1_pp_task1_2.cpp  sem1_pp_task3.ipynb  sem2_ArchNN_Lab2.ipynb  sem2_ArchNN_Lab3.ipynb  sem2_ArchNN_Lab4.ipynb  sem2_Continuous Models vs Discrete Models_eng.pptx  sem2_DMM_Lab1_eng.pptx  sem2_arch_nn_lab1.ipynb  sem2_discrete_models_lab0.py  sem2_discrete_models_lab0_report.md  sem2_discrete_models_lab2_report.md  sem2_dm_lab2.py  sem2_opt_meth_lab1.ipynb  sem2_opt_meth_lab2.ipynb  sem2_opt_meth_task4.ipynb  sem3_continious_models.ipynb
sem3_mcp_task/: Dockerfile  Makefile  README.md  helmfile.yaml  kind-config.yaml  pyproject.toml  requirements.txt
sem3_mcp_task/agent/: agent.py  executor.py  planner.py  schema_validator.py  utils.py  validator.py
sem3_mcp_task/docker/: agent.Dockerfile  clickhouse.Dockerfile  mcp-kafka.Dockerfile  mcp-spark.Dockerfile
sem3_mcp_task/jobs/: batch_etl.py  init_clickhouse.sql  streaming_etl.py
sem3_mcp_task/scripts/: demo.py  generate_events.py
sem3_mcp_task/tests/: run.py  test_a.py
(+45 files in other folders)
