[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-spark-mcp-agent"
dependencies = [
    "mcp>=0.1.0",  # MCP protocol SDK
    "fastapi>=0.104.0",
    "uvicorn[standard]",
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "pyspark>=3.5.0",
    "clickhouse-driver>=0.2.6",
    "pydantic>=2.5.0",
    "prometheus-client>=0.19.0",
    "kubernetes>=28.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
